--- a/app/src/main/res/layout/locate_package_user.xml
+++ b/app/src/main/res/layout/locate_package_user.xml
@@ -104,4 +104,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/switch1"
         app:layout_constraintVertical_bias="0.027" />
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="64dp"
+        android:layout_height="46dp"
+        app:srcCompat="@drawable/salida"
+        tools:layout_editor_absoluteX="341dp"
+        tools:layout_editor_absoluteY="16dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
