--- a/app/src/main/res/layout/locate_package_user.xml
+++ b/app/src/main/res/layout/locate_package_user.xml
@@ -14,7 +14,8 @@
         app:layout_constraintHorizontal_bias="0.093"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        tools:srcCompat="@tools:sample/avatars"
+        />
 
     <TextView
         android:id="@+id/textView6"
